--- a/bd_sistema_aps/.dbeaver/credentials-config.json
+++ b/bd_sistema_aps/.dbeaver/credentials-config.json
@@ -1,1 +1,1 @@
-:r Ó0÷"{üìQÌ¶$z(L£i2áá¹k2híj"vwŒ‡×TØqÈÙ/Ô÷)0NOÓ$5û‚-:LŒöcqÍÛÜ¹Ÿ²øê÷ÿaù-˜í‡LA°«+Â®qîžN!nj%.…«ÿzy2Q¨>ýjfÊ²Tü$<Ø÷Ô‰Ì½fu•ˆ)
+zI±KdÄh&AmÓž)h¥¨K€”ê¤ÑQíG£URãe6s'b¹1¯ñÝS÷"•äonM½rö,¦vÚ†ýA`v2 ê:ÁZVÂâQîàÛÃïj!Ð/¼Õ	Y£‡xß…c{3ÆbÄ“F	Pn`°U(Ò±–»óˆž[7´:Œ;}4Ø,õà
